[package]
name = "calculator_lib"
description = "A calculator framework designed to be modular"
repository = "https://github.com/Mnem42/calc_tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
# readme = ".\\README.md"

[features]
demo-calc = []

[dependencies]
ansiterm = "0.12.1"
text_io = "0.1.13"
